# edr-wd

./: .gitignore  CONTRIBUTING.md  SECURITY_NOTE.md  SKILL.md  check_session.ps1  deploy.ps1  dump_hisec.py  mcp_test.py  printwindow_test.py  pyproject.toml  server.py  setup-ssh.ps1  start_tunnel.py  test_qt_struct.py  test_uia_ctypes.py  tunnel.sh
agent/: client.py  deploy.ps1  edr-wd.sh  mcp_manager.py  register-hermes.sh  register-openclaw.sh  setup-mac.sh  ssh_runner.py  target_config.py  target_manager.py  tunnel.sh
agent/lifecycle/: __init__.py  base.py  macos.py  windows.py
agent/subagent/: __init__.py  pool.py  state.py  target_agent.py
agents/: openai.yaml
config/: targets.example.json  targets.json  test_machines.json
docs/architecture/: 00-overview.md  10-phase3-parallels-win.md  20-phase4-macos-hisec.md  30-phase5-macos-component-discovery-click.md
edr_wd/: pywinauto_client.py  server.py
mac/: setup-mac.sh
references/: activate-edr.md  element-click.md  window-detection.md
scripts/: redact_config.py  test_paramiko_login.py  test_profile_resolution.py  test_target_config_platforms.py
test_case/: __init__.py  conftest.py  requirements_test.txt  run_macos_generic.py  run_macos_hisec.py  run_tests.py  run_windows_hisec.py  test_profiles.py
test_case/test_e2e/: README.md  test_edr_full_workflow.py  test_macos_hisec_e2e.py  test_macos_hisec_workflow.py  test_windows_hisec_e2e.py
windows/: deploy.ps1  dump_hisec2.py  enum_win.py  enum_win2.py  test_accessible.py  test_gui.py  test_wm_gettext.py
windows/edr_wd/: server.py
(+4 files in other folders)
